--- a/Boat Sales/03 Scripts/6.1 Sourcing Open Data.ipynb
+++ b/Boat Sales/03 Scripts/6.1 Sourcing Open Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "03d88288",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "1a2c0693",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "36da06fe",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "4eed0e1d",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "4               Germany Â» Bayern Â» MÃ¼nchen                           58  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "aa53bf60",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "8c0d6f3a",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "(9888, 10)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "a37ace05",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "0548bc57",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "613453c9",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "e08fd279",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "0                226  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "c95f4b74",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "04cacf5c",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "0e1cb7e2",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
        "[1338 rows x 10 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "ead4332f",
    "metadata": {},
    "outputs": [
@@ -971,7 +971,7 @@
        "[1749 rows x 10 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "id": "08ef9555",
    "metadata": {},
    "outputs": [],
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "a40775f8",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1030,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "a878bca5",
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "e662c1ce",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1072,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "151934f8",
    "metadata": {},
    "outputs": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "id": "dce314b8",
    "metadata": {},
    "outputs": [],
@@ -1149,139 +1149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "a40d36e7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Price</th>\n",
-       "      <th>Boat Type</th>\n",
-       "      <th>Manufacturer</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Year Built</th>\n",
-       "      <th>Length</th>\n",
-       "      <th>Width</th>\n",
-       "      <th>Material</th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Views last 7 days</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>CHF 3337</td>\n",
-       "      <td>Motor Yacht</td>\n",
-       "      <td>Rigiflex power boats</td>\n",
-       "      <td>new boat from stock</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Switzerland Â» Lake Geneva Â» VÃ©senaz</td>\n",
-       "      <td>226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EUR 3490</td>\n",
-       "      <td>Center console boat</td>\n",
-       "      <td>Terhi power boats</td>\n",
-       "      <td>new boat from stock</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>Thermoplastic</td>\n",
-       "      <td>Germany Â» BÃ¶nningstedt</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CHF 3770</td>\n",
-       "      <td>Sport Boat</td>\n",
-       "      <td>Marine power boats</td>\n",
-       "      <td>new boat from stock</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.69</td>\n",
-       "      <td>1.42</td>\n",
-       "      <td>Aluminium</td>\n",
-       "      <td>Switzerland Â» Lake of Zurich Â» StÃ¤fa ZH</td>\n",
-       "      <td>124</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DKK 25900</td>\n",
-       "      <td>Sport Boat</td>\n",
-       "      <td>Pioner power boats</td>\n",
-       "      <td>new boat from stock</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Denmark Â» Svendborg</td>\n",
-       "      <td>64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>EUR 3399</td>\n",
-       "      <td>Fishing Boat</td>\n",
-       "      <td>Linder power boats</td>\n",
-       "      <td>new boat from stock</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>3.55</td>\n",
-       "      <td>1.46</td>\n",
-       "      <td>Aluminium</td>\n",
-       "      <td>Germany Â» Bayern Â» MÃ¼nchen</td>\n",
-       "      <td>58</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Price            Boat Type          Manufacturer                 Type  \\\n",
-       "0   CHF 3337          Motor Yacht  Rigiflex power boats  new boat from stock   \n",
-       "1   EUR 3490  Center console boat     Terhi power boats  new boat from stock   \n",
-       "2   CHF 3770           Sport Boat    Marine power boats  new boat from stock   \n",
-       "3  DKK 25900           Sport Boat    Pioner power boats  new boat from stock   \n",
-       "4   EUR 3399         Fishing Boat    Linder power boats  new boat from stock   \n",
-       "\n",
-       "   Year Built  Length  Width       Material  \\\n",
-       "0        2017    4.00   1.90        Unknown   \n",
-       "1        2020    4.00   1.50  Thermoplastic   \n",
-       "2           0    3.69   1.42      Aluminium   \n",
-       "3        2020    3.00   1.00        Unknown   \n",
-       "4        2019    3.55   1.46      Aluminium   \n",
-       "\n",
-       "                                     Location  Views last 7 days  \n",
-       "0      Switzerland Â» Lake Geneva Â» VÃ©senaz                226  \n",
-       "1                    Germany Â» BÃ¶nningstedt                 75  \n",
-       "2  Switzerland Â» Lake of Zurich Â» StÃ¤fa ZH                124  \n",
-       "3                        Denmark Â» Svendborg                 64  \n",
-       "4               Germany Â» Bayern Â» MÃ¼nchen                 58  "
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/3y/p4952z696432py_v1pq1tc6h0000gn/T/ipykernel_59609/3235490055.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1290,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "d7b96cf0",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1275,7 @@
        "max    2021.000000   100.000000    25.160000        3263.000000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "id": "e3bfd2d7",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "id": "db1cff3c",
    "metadata": {},
    "outputs": [
@@ -1567,7 +1448,7 @@
        "4               Germany Â» Bayern Â» MÃ¼nchen                 58      EUR  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "id": "bec6a42f",
    "metadata": {},
    "outputs": [
@@ -1592,7 +1473,7 @@
        "Name: Currency, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "id": "bd547711",
    "metadata": {},
    "outputs": [],
@@ -1624,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "id": "d407c037",
    "metadata": {},
    "outputs": [
@@ -1773,7 +1654,7 @@
        "4          3399  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1784,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "id": "e258b5c3",
    "metadata": {},
    "outputs": [],
@@ -1795,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "id": "d7c8c72b",
    "metadata": {},
    "outputs": [
@@ -1925,7 +1806,7 @@
        "4                 58          3399  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1936,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "id": "98a11f34",
    "metadata": {},
    "outputs": [],
@@ -1950,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "id": "3eb303b5",
    "metadata": {},
    "outputs": [
@@ -2098,7 +1979,7 @@
        "4                 58          3399      Germany            Bayern     MÃ¼nchen  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "id": "3abc2390",
    "metadata": {},
    "outputs": [],
@@ -2120,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "id": "39b9e250",
    "metadata": {},
    "outputs": [
@@ -2256,7 +2137,7 @@
        "4      Germany            Bayern   "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2267,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "id": "72c9c935",
    "metadata": {},
    "outputs": [],
@@ -2278,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "id": "bda36b0c",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2295,7 @@
        "6  Switzerland    Neuenburgersee   "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2425,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "id": "9f4e84d8",
    "metadata": {},
    "outputs": [
@@ -2529,7 +2410,7 @@
        "max    2021.000000   100.000000    25.160000        3263.000000"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2541,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "id": "ea126adb",
    "metadata": {},
    "outputs": [
@@ -2577,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 38,
    "id": "9801ac71",
    "metadata": {},
    "outputs": [],
@@ -2588,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 39,
    "id": "2a316ce8",
    "metadata": {},
    "outputs": [
@@ -2624,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 40,
    "id": "ddf5e76c",
    "metadata": {},
    "outputs": [
@@ -2645,7 +2526,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2665,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 41,
    "id": "209c8de7",
    "metadata": {},
    "outputs": [],
@@ -2676,7 +2557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 42,
    "id": "f77dc5e7",
    "metadata": {},
    "outputs": [
@@ -2697,7 +2578,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2709,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 43,
    "id": "37e71b42",
    "metadata": {},
    "outputs": [
@@ -2753,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 44,
    "id": "b0ec03fc",
    "metadata": {},
    "outputs": [],
