--- a/Boat Sales/03 Scripts/6.6 Sourcing & Analyzing Time Series Data.ipynb
+++ b/Boat Sales/03 Scripts/6.6 Sourcing & Analyzing Time Series Data.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0cd84aca",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ec5c3899",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8cc0ff68",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "841d1325",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cf6ff609",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "1979-05-31  1038.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "07ec2ec1",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "2022-11-30  7721.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "42c40771",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "(527, 1)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "901c1953",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "Index(['Value'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "95f66e18",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "bb748bda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f97716edc70>]"
+       "[<matplotlib.lines.Line2D at 0x7f8d8dde3490>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "c5fa81e7",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "e6e09f29",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
        "4 1979-05-31  1038.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "93f5398e",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "1ee786cd",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "(275, 2)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "7dcb0565",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
        "2000-05-31  3931.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,17 +567,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d74b051e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9771e20ee0>]"
+       "[<matplotlib.lines.Line2D at 0x7f8d8e61bfd0>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "dfe207cf",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "0cb10a8f",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "8"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "1ba1f930",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "fd73b54a",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "c22aa71a",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "c87dab0b",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "1f924be0",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "id": "3de25664",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "ddb5f9b6",
    "metadata": {},
    "outputs": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "4f5ad816",
    "metadata": {},
    "outputs": [],
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "f408c839",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "        [0.0954725 , 1.47254963]]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "597e9b72",
    "metadata": {},
    "outputs": [],
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "5155d888",
    "metadata": {},
    "outputs": [],
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "1ad9c6a7",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "2000-06-30 -195.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "id": "e545bd1f",
    "metadata": {},
    "outputs": [
@@ -1073,7 +1073,7 @@
        "Index(['Value'], dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,17 +1084,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "43095d99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9769bef430>]"
+       "[<matplotlib.lines.Line2D at 0x7f8d86404dc0>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "9e9ebe33",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "c1066add",
    "metadata": {},
    "outputs": [
